--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # 忽略文件
 
 # 忽略CPT-papers文件夹下的所有文件，但保留md文件，这样能够保留CPT-papers文件夹。因为git不会追踪空文件夹，因此空文件夹默认无法直接上传到 GitHub。
-/CPT-papers/*
+/data/*
 
 # ！表示不过滤
 !*.md 
 
-PR.txt
+
+
 
 
 
